[tool.poetry]
name = "test-export"
version = "0.1.0"
description = ""
authors = ["Mikuláš Poul <git@mikulaspoul.cz>"]
readme = "README.md"
packages = [{include = "test_export"}]

[tool.poetry.dependencies]
python = "^3.9"
moto = {extras = ["iam", "lambda", "s3"], version = "^4.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
